--- a/demo.html
+++ b/demo.html
@@ -22,7 +22,7 @@
 	<body>
 		<div id="shake-me-default">Click Me</div>
 		<div id="shake-me-option">Click Me<br>w/ options</div>
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
 		<script src="jquery.ui.shake.js"></script>
 		<script>
 			$(document).ready(function() {
